schema/testdata/errors/lhs_rhs_type_mismatch.keel
model Post {
    fields {
        title Text
    }

    @permission(
        //expect-error:32:34:AttributeExpressionError:cannot use operator '==' with types Text and Number
        expression: post.title == 12,
        actions: [get]
    )
}
